<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#dd000000"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarThumbVertical="@drawable/scroll_bar" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/text_32" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_vinafood"
                android:textColor="@color/grey_standard"
                android:textSize="@dimen/text_22" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="7dip"
                android:background="@color/grey" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/text_32" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="7dip"
                android:background="@color/grey" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_sig"
                android:textColor="@color/grey_standard"
                android:textSize="@dimen/text_22" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="7dip"
                android:background="@color/grey" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/text_32" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_100"
                android:textColor="@color/grey_standard"
                android:textSize="@dimen/text_22" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="7dip"
                android:background="@color/grey" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_otherapp"
                android:textColor="@color/WHITE"
                android:textSize="@dimen/text_32" />

            <TextView
                android:id="@+id/txt_other_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_app"
                android:textColor="@color/grey_standard"
                android:textSize="@dimen/text_22" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>